@@ -11,6 +11,7 @@ test background @abs_top_builddir@/tests/data/cmd-background ANYUSER
 test stdin @abs_top_builddir@/tests/data/cmd-stdin stdin=last ANYUSER
 test sleep @abs_top_srcdir@/tests/data/cmd-sleep ANYUSER
 test large-output @abs_top_builddir@/tests/data/cmd-large-output ANYUSER
+test sigpipe @abs_top_builddir@/tests/data/cmd-sigpipe ANYUSER
 test-summary ALL @abs_top_srcdir@/tests/data/cmd-help \
     summary=summary \
     help=help ANYUSER
@@ -18,7 +19,7 @@ empty EMPTY @abs_top_srcdir@/tests/data/cmd-argv ANYUSER
 all ALL @abs_top_srcdir@/tests/data/cmd-hello ANYUSER
 ALL bar @abs_top_srcdir@/tests/data/cmd-hello ANYUSER
 
-# Copyright 2013
+# Copyright 2013, 2014
 #     The Board of Trustees of the Leland Stanford Junior University
 #
 # Copying and distribution of this file, with or without modification,
